--- a/first-web-app/first-web-app/package.json
+++ b/first-web-app/first-web-app/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@clr/angular": "^0.11.0",
+    "@clr/icons": "^0.11.0",
+    "@clr/ui": "^0.11.0",
+    "@webcomponents/custom-elements": "^1.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
